--- a/Assignment 4 _Loops.ipynb
+++ b/Assignment 4 _Loops.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "Module 1: Loops\n",
-    " Assignment- 1"
+    " Assignment- 2"
    ]
   },
   {
@@ -23,45 +23,46 @@
    "metadata": {},
    "source": [
     "Tasks To Be Performed:\n",
-    " 1. Print the numbers from 1 to 10 using while loop."
+    " 1. Create a list that has 10, 23, 4, 26, 4, 75, 24, 54 values and with the help\n",
+    " of while loop fetch the even numbers and print the numbers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n",
+      "10\n",
       "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n"
+      "26\n",
+      "4\n",
+      "24\n",
+      "54\n"
      ]
     }
    ],
    "source": [
-    "# Initialize the counter variable\n",
-    "num = 1\n",
+    "# List of numbers\n",
+    "numbers = [10, 23, 4, 26, 4, 75, 24, 54]\n",
     "\n",
-    "# Use a while loop to print numbers from 1 to 10\n",
-    "while num <= 10:\n",
-    "    print(num)\n",
-    "    num += 1  # Increment the counter to move to the next number\n"
+    "# Initialize the index\n",
+    "index = 0\n",
+    "\n",
+    "# While loop to check each element\n",
+    "while index < len(numbers):\n",
+    "    if numbers[index] % 2 == 0:  # Check if the number is even\n",
+    "        print(numbers[index])  # Print the even number\n",
+    "    index += 1  # Increment the index to move to the next number\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
